--- a/Projet Onssa/Projet Onssa.csproj
+++ b/Projet Onssa/Projet Onssa.csproj
@@ -377,6 +377,12 @@
     <Compile Include="PvrForm.Designer.cs">
       <DependentUpon>PvrForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Statistique.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Statistique.Designer.cs">
+      <DependentUpon>Statistique.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Accueil.resx">
       <DependentUpon>Accueil.cs</DependentUpon>
     </EmbeddedResource>
@@ -509,6 +515,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PvrForm.resx">
       <DependentUpon>PvrForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Statistique.resx">
+      <DependentUpon>Statistique.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="OnssaModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
