--- a/Projet Onssa/packages.config
+++ b/Projet Onssa/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.fr" version="6.2.0" targetFramework="net472" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
+  <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net472" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
   <package id="MaterialSkin.2" version="2.1.4" targetFramework="net472" />
   <package id="Refractored.FloatingActionButtonForms" version="2.1.0" targetFramework="net472" />
