--- a/Projet Onssa/App.config
+++ b/Projet Onssa/App.config
@@ -9,15 +9,15 @@
   </startup>
   <connectionStrings>
       <add name="Projet_Onssa.Properties.Settings.Onssa_ProjetConnectionString"
-          connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Onssa_Db.mdf;Integrated Security=True;Connect Timeout=30"
+          connectionString="workstation id=OnssaProjet.mssql.somee.com;packet size=4096;user id=zakarm_SQLLogin_1;pwd=g9b9ychmvx;data source=OnssaProjet.mssql.somee.com;persist security info=False;initial catalog=OnssaProjet"
           providerName="System.Data.SqlClient" />
       <add name="Projet_Onssa.Properties.Settings.Onssa_ProjetConnectionString1"
-          connectionString="Data Source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Onssa_Db.mdf;Integrated Security=True;Connect Timeout=30"
+          connectionString="workstation id=OnssaProjet.mssql.somee.com;packet size=4096;user id=zakarm_SQLLogin_1;pwd=g9b9ychmvx;data source=OnssaProjet.mssql.somee.com;persist security info=False;initial catalog=OnssaProjet"
           providerName="System.Data.SqlClient" />
       <add name="Projet_Onssa.Properties.Settings.Onssa_DbConnectionString"
-          connectionString="Data Source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Onssa_Db.mdf;Integrated Security=True;Connect Timeout=30"
+          connectionString="workstation id=OnssaProjet.mssql.somee.com;packet size=4096;user id=zakarm_SQLLogin_1;pwd=g9b9ychmvx;data source=OnssaProjet.mssql.somee.com;persist security info=False;initial catalog=OnssaProjet"
           providerName="System.Data.SqlClient" />
-      <add name="OnssaModelContainer4" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Onssa_Db.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      <add name="OnssaModelContainer4" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;workstation id=OnssaProjet.mssql.somee.com;packet size=4096;user id=zakarm_SQLLogin_1;pwd=g9b9ychmvx;data source=OnssaProjet.mssql.somee.com;persist security info=False;initial catalog=OnssaProjet;MultipleActiveResultSets=True;App=EntityFramework&quot;"
           providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
@@ -35,3 +35,5 @@
     </assemblyBinding>
   </runtime>
 </configuration>
+
+<!-- Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Onssa_Db.mdf;Integrated Security=True;Connect Timeout=30 -->
