--- a/Projet Onssa/App.config
+++ b/Projet Onssa/App.config
@@ -7,17 +7,18 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
+	
   <connectionStrings>
     <add name="Projet_Onssa.Properties.Settings.Onssa_ProjetConnectionString"
-      connectionString="workstation id=OnssaProjet.mssql.somee.com;packet size=4096;user id=zakarm_SQLLogin_1;pwd=g9b9ychmvx;data source=OnssaProjet.mssql.somee.com;persist security info=False;initial catalog=OnssaProjet"
+      connectionString=" Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Onssa_Db.mdf;Integrated Security=True;Connect Timeout=30"
       providerName="System.Data.SqlClient" />
     <add name="Projet_Onssa.Properties.Settings.Onssa_ProjetConnectionString1"
-      connectionString="workstation id=OnssaProjet.mssql.somee.com;packet size=4096;user id=zakarm_SQLLogin_1;pwd=g9b9ychmvx;data source=OnssaProjet.mssql.somee.com;persist security info=False;initial catalog=OnssaProjet"
+      connectionString=" Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Onssa_Db.mdf;Integrated Security=True;Connect Timeout=30"
       providerName="System.Data.SqlClient" />
     <add name="Projet_Onssa.Properties.Settings.Onssa_DbConnectionString"
       connectionString="workstation id=OnssaProjet.mssql.somee.com;packet size=4096;user id=zakarm_SQLLogin_1;pwd=g9b9ychmvx;data source=OnssaProjet.mssql.somee.com;persist security info=False;initial catalog=OnssaProjet"
       providerName="System.Data.SqlClient" />
-    <add name="OnssaModelContainer4" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;workstation id=OnssaProjet.mssql.somee.com;packet size=4096;user id=zakarm_SQLLogin_1;pwd=g9b9ychmvx;data source=OnssaProjet.mssql.somee.com;persist security info=False;initial catalog=OnssaProjet;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    <add name="OnssaModelContainer4" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot; Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Onssa_Db.mdf;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
@@ -34,6 +35,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+	
 </configuration>
 
 <!-- Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Onssa_Db.mdf;Integrated Security=True;Connect Timeout=30 -->
