--- a/Projet Onssa/App.config
+++ b/Projet Onssa/App.config
@@ -10,15 +10,15 @@
 	
   <connectionStrings>
     <add name="Projet_Onssa.Properties.Settings.Onssa_ProjetConnectionString"
-      connectionString=" Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Onssa_Db.mdf;Integrated Security=True;Connect Timeout=30"
+      connectionString=" Data Source=DESKTOP-IRG7UCK\SQLEXPRESS;Initial Catalog=Onssa_Projet;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="Projet_Onssa.Properties.Settings.Onssa_ProjetConnectionString1"
-      connectionString=" Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Onssa_Db.mdf;Integrated Security=True;Connect Timeout=30"
+      connectionString=" Data Source=DESKTOP-IRG7UCK\SQLEXPRESS;Initial Catalog=Onssa_Projet;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="Projet_Onssa.Properties.Settings.Onssa_DbConnectionString"
-      connectionString="workstation id=OnssaProjet.mssql.somee.com;packet size=4096;user id=zakarm_SQLLogin_1;pwd=g9b9ychmvx;data source=OnssaProjet.mssql.somee.com;persist security info=False;initial catalog=OnssaProjet"
+      connectionString="Data Source=DESKTOP-IRG7UCK\SQLEXPRESS;Initial Catalog=Onssa_Projet;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="OnssaModelContainer4" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot; Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Onssa_Db.mdf;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    <add name="OnssaModelContainer4" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot; Data Source=DESKTOP-IRG7UCK\SQLEXPRESS;Initial Catalog=Onssa_Projet;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
